banner example, added

--- a/src/styles/_menu.scss
+++ b/src/styles/_menu.scss
@@ -24,7 +24,7 @@ $test: rgb(77, 77, 77);
     align-items: center;
     padding: 0 24px;
     height: 62px;
-    border: 1px solid $test;
+    // border: 1px solid $test;
     >img{
         width: 150px;
     }
@@ -36,10 +36,12 @@ $test: rgb(77, 77, 77);
         position: absolute;
         top: 62px;
         right: 0;
+        z-index: 5;
         width: 320px;
         min-height: 100vh;
         padding: 54px 24px;
         font-size: 18px;
+        
         background: rgb(233, 233, 233);
         >ul{
             display: flex;
@@ -110,6 +112,9 @@ $test: rgb(77, 77, 77);
 @media only screen and(min-width:668px){
     .menu{
         flex-direction: column;
+        height: auto;
+        padding-top: 24px;
+        // background-color: aquamarine;
         >img{
             // width: 150px;
         }
@@ -119,9 +124,20 @@ $test: rgb(77, 77, 77);
         >nav{
             position: initial;
             display: flex;
+            min-height: 50px;
+            width: auto;
+            padding: 0;
+        //background-color: aqua;
             >ul{
                 display: flex;
                 flex-direction: row;
+                >li{
+                    width: auto;
+                    margin: 0 24px;
+                    // text-align: start;
+                    // background-color: aquamarine;
+                }
+                
             }
         }
     }
