--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -26,7 +26,6 @@
   align-items: center;
   padding: 0 24px;
   height: 62px;
-  border: 1px solid rgb(77, 77, 77);
 }
 .menu > img {
   width: 150px;
@@ -39,6 +38,7 @@
   position: absolute;
   top: 62px;
   right: 0;
+  z-index: 5;
   width: 320px;
   min-height: 100vh;
   padding: 54px 24px;
@@ -75,6 +75,8 @@
 @media only screen and (min-width: 668px) {
   .menu {
     flex-direction: column;
+    height: auto;
+    padding-top: 24px;
   }
   .menu > i {
     display: none;
@@ -82,10 +84,17 @@
   .menu > nav {
     position: initial;
     display: flex;
+    min-height: 50px;
+    width: auto;
+    padding: 0;
   }
   .menu > nav > ul {
     display: flex;
     flex-direction: row;
+  }
+  .menu > nav > ul > li {
+    width: auto;
+    margin: 0 24px;
   }
 }
 * {
@@ -98,6 +107,59 @@ body {
   min-width: 320px;
   max-width: 1500px;
   margin: auto;
+  overflow-x: hidden;
+}
+
+header .banner {
+  position: relative;
+  height: 450px;
+}
+header .banner .waveTop {
+  position: absolute;
+  top: -5px;
+  width: 100%;
+  z-index: 10;
+  transform: rotate(180deg);
+}
+header .banner .coverImg {
+  position: relative;
+  background-image: url("../assets/mobile/cover-cell.jpeg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  background-color: aliceblue;
+  min-width: 320px;
+  height: 100%;
+}
+header .banner .coverImg > div {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(134, 211, 19, 0.511);
+}
+header .banner .coverImg > div > h1 {
+  color: white;
+  letter-spacing: 3px;
+}
+header .banner .waveBotton {
+  position: absolute;
+  bottom: -3px;
+  width: 100%;
+}
+
+@media only screen and (min-width: 800px) {
+  header .banner {
+    height: 300px;
+  }
+  header .banner .coverImg {
+    background-image: url("../assets/desktop/cover.jpeg");
+  }
 }
 
 /*# sourceMappingURL=index.css.map */
