--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,4 +13,88 @@ body{
     min-width: 320px;
     max-width: 1500px;
     margin: auto;
+    overflow-x: hidden;
+}
+// header styles
+
+header{
+    .banner{
+        position: relative;
+        // background-color: rgb(72, 27, 79);
+        height: 450px; 
+        .waveTop{
+            position: absolute;
+            top: -5px;
+            width: 100%;
+            z-index: 10;
+            transform: rotate(180deg);
+
+        } 
+        .coverImg {
+            position: relative;
+            background-image: url("../assets/mobile/cover-cell.jpeg");
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
+            background-attachment: fixed;
+            background-color: aliceblue;
+            min-width: 320px;
+            height: 100%;
+            >div{
+                position: absolute;
+                top: 0;
+                right: 0;
+                left: 0;
+                bottom: 0;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                background-color: rgba(134, 211, 19, 0.511);
+                >h1{
+                    color: white;
+                    letter-spacing: 3px;
+                }
+            }
+        }
+        .waveBotton{
+            position: absolute;
+            bottom: -3px;
+            width: 100%;
+        }
+    }
+  
+
+}
+
+// medias
+@media only screen and(min-width:668px){
+    header{
+        .banner{
+            .waveTop{
+                
+    
+            } 
+            .coverImg {
+                >div{
+                }
+            }
+            .waveBotton{
+            
+            }
+        }
+    
+    }
+
+}
+
+@media only screen and(min-width:800px){
+    header{
+        .banner{
+            height: 300px;
+            .coverImg{
+                background-image: url("../assets/desktop/cover.jpeg");
+
+            }
+        }
+    }
 }
