--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -32,9 +32,9 @@ header{
         } 
         .coverImg {
             position: relative;
-            background-image: url("../assets/mobile/cover-cell.jpeg");
+            background-image: url("../assets/desktop/cover.jpeg");
             background-repeat: no-repeat;
-            background-position: center;
+            background-position: right top;
             background-size: cover;
             background-attachment: fixed;
             background-color: aliceblue;
@@ -49,8 +49,9 @@ header{
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                background-color: rgba(134, 211, 19, 0.511);
+                background-color: rgba(1, 1, 1, 0.675);
                 >h1{
+                    display: none;
                     color: white;
                     letter-spacing: 3px;
                 }
@@ -92,7 +93,7 @@ header{
         .banner{
             height: 300px;
             .coverImg{
-                background-image: url("../assets/desktop/cover.jpeg");
+                // background-image: url("../assets/desktop/cover.jpeg");
 
             }
         }
