about us section structure and content

--- a/src/styles/_menu.scss
+++ b/src/styles/_menu.scss
@@ -30,7 +30,7 @@ $test: rgb(77, 77, 77);
     }
     >i{
         font-size: 24px;
-        color: $test;
+        color: rgba(148, 198, 118, 1);
     }
     >nav{
         position: absolute;
