--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,9 @@
 // header -menu/banner, footer, global, menu styles
 @use "./menu";
+@use "./about";
 
+// rgba(93, 93, 93, 1)
+// color: rgba(187, 168, 121, 1);
 
 // global styles
 
@@ -13,10 +16,31 @@ body{
     min-width: 320px;
     max-width: 1500px;
     margin: auto;
-    overflow-x: hidden;
-}
-// header styles
+    font-family: Arial, Helvetica, sans-serif;
+    //color de letra en general
+    color: rgba(93, 93, 93, 1);
+    font-weight: 200;
+    letter-spacing: .5px;
+    font-size: 17px;
 
+    // overflow-x: hidden;
+
+
+}
+h1, h2, h3, h4 {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 800;
+    font-size: 25px;//h3 y h4 change size
+    letter-spacing: 1px;
+    color: rgba(128, 200, 200, 1);
+}
+
+main{
+    padding: 24px;
+    // background-color: beige;
+}
+
+// header styles
 header{
     .banner{
         position: relative;
@@ -49,7 +73,7 @@ header{
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                background-color: rgba(1, 1, 1, 0.675);
+                background-color:rgba(147, 198, 118, 0.476);
                 >h1{
                     display: none;
                     color: white;
@@ -69,22 +93,11 @@ header{
 
 // medias
 @media only screen and(min-width:668px){
-    header{
-        .banner{
-            .waveTop{
-                
-    
-            } 
-            .coverImg {
-                >div{
-                }
-            }
-            .waveBotton{
-            
-            }
-        }
-    
-    }
+   main{
+       padding: 0;
+       max-width: 85%;
+       margin: auto;
+   }
 
 }
 
