--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -1,4 +1,6 @@
-$color-test:rgba(93, 93, 93, 1);
+$icon-border:rgba(187, 168, 121, 1);
+// $icon-border:rgba(148, 198, 118, 1);
+
 .about{
     text-align: center;
     // border: 1px solid black;
@@ -7,30 +9,35 @@ $color-test:rgba(93, 93, 93, 1);
         font-size: 17px;
         font-weight: 200;
         letter-spacing: .5px;
+        line-height: 30px;
         margin: 8px ;
     }
     .adjectives{
+        display: flex;
+        flex-wrap: wrap;
         margin: 50px 0;
         // background-color: rgb(248, 214, 221);
         >article{
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
+            width: 250px;
             height: auto;
-            margin: 20px 0;
+            margin: 20px auto;
             padding: 60px 38px;
-            border: 1px solid $color-test;
+            border: 1px solid $icon-border;
             >i{
-                font-size: 42px;
+                font-size: 47px;
+                color:$icon-border;
 
             }
             >h4{
+                font-size: 22px;
                 margin: 10px 0 30px 0;
             }
             >p{
 
             }
         }
-   }
+    }
+    .ourMission{
+        background-color: rgb(208, 252, 182);
+    }
 }
