--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -105,27 +105,33 @@
   font-size: 17px;
   font-weight: 200;
   letter-spacing: 0.5px;
+  line-height: 30px;
   margin: 8px;
 }
 .about .adjectives {
+  display: flex;
+  flex-wrap: wrap;
   margin: 50px 0;
 }
 .about .adjectives > article {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  width: 250px;
   height: auto;
-  margin: 20px 0;
+  margin: 20px auto;
   padding: 60px 38px;
-  border: 1px solid rgb(93, 93, 93);
+  border: 1px solid rgb(187, 168, 121);
 }
 .about .adjectives > article > i {
-  font-size: 42px;
+  font-size: 47px;
+  color: rgb(187, 168, 121);
 }
 .about .adjectives > article > h4 {
+  font-size: 22px;
   margin: 10px 0 30px 0;
 }
+.about .ourMission {
+  background-color: rgb(208, 252, 182);
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -138,9 +144,10 @@ body {
   margin: auto;
   font-family: Arial, Helvetica, sans-serif;
   color: rgb(93, 93, 93);
+  font-size: 17px;
   font-weight: 200;
   letter-spacing: 0.5px;
-  font-size: 17px;
+  line-height: 30px;
 }
 
 h1, h2, h3, h4 {
@@ -148,6 +155,7 @@ h1, h2, h3, h4 {
   font-weight: 800;
   font-size: 25px;
   letter-spacing: 1px;
+  line-height: 35px;
   color: rgb(128, 200, 200);
 }
 
