--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,9 +1,10 @@
 // header -menu/banner, footer, global, menu styles
 @use "./menu";
 @use "./about";
-
+$font-color:rgba(93, 93, 93, 1);
 // rgba(93, 93, 93, 1)
 // color: rgba(187, 168, 121, 1);
+
 
 // global styles
 
@@ -18,10 +19,11 @@ body{
     margin: auto;
     font-family: Arial, Helvetica, sans-serif;
     //color de letra en general
-    color: rgba(93, 93, 93, 1);
+    color: $font-color;
+    font-size: 17px;
     font-weight: 200;
     letter-spacing: .5px;
-    font-size: 17px;
+    line-height: 30px;
 
     // overflow-x: hidden;
 
@@ -32,6 +34,7 @@ h1, h2, h3, h4 {
     font-weight: 800;
     font-size: 25px;//h3 y h4 change size
     letter-spacing: 1px;
+    line-height: 35px;
     color: rgba(128, 200, 200, 1);
 }
 
