--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -101,12 +101,13 @@
   text-align: center;
 }
 .about > h3 {
+  width: 80%;
+  margin: 8px auto;
   color: rgb(93, 93, 93);
   font-size: 17px;
   font-weight: 200;
   letter-spacing: 0.5px;
   line-height: 30px;
-  margin: 8px;
 }
 .about .adjectives {
   display: flex;
@@ -128,10 +129,87 @@
   font-size: 22px;
   margin: 10px 0 30px 0;
 }
-.about .ourMission {
-  background-color: rgb(208, 252, 182);
+.about .mission {
+  position: relative;
+  padding: 60px 0;
+  background-color: rgba(238, 238, 238, 0.628);
+}
+.about .mission .content {
+  width: 80%;
+  margin: 8px auto;
+}
+.about .mission .content > h2 {
+  margin-bottom: 25px;
+}
+.about .mission .waveDecoration {
+  position: absolute;
+  bottom: -50px;
+  left: 0;
+  width: 100%;
+  transform: rotate(180deg);
 }
 
+.services {
+  padding: 60px 0;
+}
+.services > h2 {
+  text-align: center;
+  margin: 30px 15px 60px 15px;
+}
+.services .categories {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  margin: auto;
+}
+.services .categories > article {
+  width: 100%;
+  background-color: white;
+}
+.services .categories > article .imgConteiner {
+  width: 100%;
+  min-height: 250px;
+}
+.services .categories > article .imgConteiner > img {
+  width: 100%;
+  height: 100%;
+}
+.services .categories > article .content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 50px 20px;
+}
+.services .categories > article .content > h3 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+.services .categories > article .content > p {
+  text-align: start;
+}
+.services .categories > article .content > a {
+  text-decoration: none;
+  padding: 15px 24px;
+  margin-top: 15%;
+  background-color: rgb(99, 98, 98);
+}
+.services .categories > article:nth-child(even) {
+  background-color: black;
+  color: aliceblue;
+}
+
+@media only screen and (min-width: 568px) {
+  .services .categories > article {
+    width: 50%;
+    margin: 0 auto;
+  }
+}
+@media only screen and (min-width: 900px) {
+  .services .categories > article {
+    width: 33.3%;
+    margin: 0 auto;
+  }
+}
 * {
   padding: 0;
   margin: 0;
@@ -157,10 +235,6 @@ h1, h2, h3, h4 {
   letter-spacing: 1px;
   line-height: 35px;
   color: rgb(128, 200, 200);
-}
-
-main {
-  padding: 24px;
 }
 
 header .banner {
@@ -207,13 +281,6 @@ header .banner .waveBotton {
   width: 100%;
 }
 
-@media only screen and (min-width: 668px) {
-  main {
-    padding: 0;
-    max-width: 85%;
-    margin: auto;
-  }
-}
 @media only screen and (min-width: 800px) {
   header .banner {
     height: 300px;
