--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -210,6 +210,29 @@
     margin: 0 auto;
   }
 }
+.ourCustomers {
+  padding: 60px 0;
+  border: 1px solid saddlebrown;
+}
+.ourCustomers > h2 {
+  text-align: center;
+  margin: 30px 15px 60px 15px;
+}
+.ourCustomers .carousel {
+  min-height: 300px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  text-align: center;
+  color: rgb(109, 108, 108);
+  background-color: rgba(238, 238, 238, 0.628);
+}
+.ourCustomers .carousel .carousel-inner .carousel-item {
+  padding: 15%;
+}
+.ourCustomers .carousel .carousel-inner .carousel-item > span {
+  font-style: italic;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -281,9 +304,49 @@ header .banner .waveBotton {
   width: 100%;
 }
 
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 30px 0;
+  color: aliceblue;
+  background-color: black;
+}
+footer .isotipo {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  padding: 5px;
+  border: 0.5px solid rgb(187, 168, 121);
+}
+footer .isotipo > img {
+  width: 100%;
+  height: 100%;
+}
+footer .info {
+  width: 80%;
+  padding: 20px 5px;
+  text-align: center;
+}
+footer .info i {
+  font-size: 33px;
+  margin: 5px;
+  color: rgb(187, 168, 121);
+}
+footer .info ul {
+  list-style: none;
+  margin-top: 20px;
+}
+
 @media only screen and (min-width: 800px) {
   header .banner {
     height: 300px;
+  }
+}
+@media only screen and (min-width: 1024px) {
+  footer {
+    flex-direction: row;
   }
 }
 
