--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,6 +2,7 @@
 @use "./menu";
 @use "./about";
 @use "./treatments";
+@use "./ourCustomers";
 
 $font-color:rgba(93, 93, 93, 1);
 // rgba(93, 93, 93, 1)
@@ -94,24 +95,72 @@ header{
             width: 100%;
         }
     }
-  
-
 }
+// fotter
+footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 30px 0;
+    color: aliceblue;
+    background-color: black;
+    .isotipo{
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        padding: 5px;
+        border: .5px solid rgba(187, 168, 121, 1);
+
+        >img{
+            width: 100%;
+            height: 100%;
+        
+        }
+
+    }
+   
+    .info {
+        width: 80%;
+        padding: 20px 5px;
+        text-align: center;
+        // background-color: rgba(240, 248, 255, 0.447);
+        i{
+            font-size: 33px;
+            margin: 5px;
+            color: rgba(187, 168, 121, 1);
+        }
+        ul{
+            list-style: none;
+            margin-top: 20px;
+            // background-color: rgba(158, 215, 196, 0.689);
+
+        }
+
+    }
+    
+}
+
+
+
+
 
 // medias
-@media only screen and(min-width:668px){
-
-
-}
-
 @media only screen and(min-width:800px){
     header{
         .banner{
             height: 300px;
             .coverImg{
                 // background-image: url("../assets/desktop/cover.jpeg");
-
             }
         }
     }
+}
+
+@media only screen and(min-width:1024px){
+    footer{
+        flex-direction: row;
+    }
+
+
 }
